@@ -24,6 +24,9 @@ be added to the compat rules file.
 Symlinks to udevadm with the old command names are no longer resolved to
 the udevadm commands.
 
+The udev-acl tool got adopted to changes in ConsoleKit. Version 0.4.11 is
+required now.
+
 udev 146
 ========
 Bugfixes.
